--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "finalproject",
   "version": "1.0.0",
   "description": "final project for cs313",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
