--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "Dixie Cravens",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "pg": "^7.18.2",
-    "ejs": "^2.5.6"
+    "pg": "^7.18.2"
   }
 }
