--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Dixie Cravens",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
